Fixed spacing

--- a/src/components/scroll-up.css
+++ b/src/components/scroll-up.css
@@ -1,5 +1,5 @@
 .scroll-up {
-    background-color: rebeccapurple;
+    background-color: #04091e;
     border: none;
     border-radius: 50%;
     bottom: -100px;
@@ -7,7 +7,7 @@
     height: 50px;
     opacity: 0;
     position: fixed;
-    right: 20px;
+    right: 3rem;
     transition: bottom .5s, opacity .5s;
     width: 50px;
     z-index: 10;
